--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "netlify-cli": "^2.65.7",
     "vue": "^2.6.11"
   },
   "devDependencies": {
